# Copyright (c) 2020 FMSoft.

shared_library("ace_kit_cipher") {
  sources = [
    "src/cipher_module.cpp",
  ]
  cflags = [
    "-fPIC",
    "-Wall",
  ]

  include_dirs = [
    "//base/security/frameworks/crypto_lite/cipher/include",
    "//foundation/ace/interfaces/innerkits/builtin/jsi",
    "//foundation/ace/interfaces/innerkits/builtin/base",
    "//third_party/bounds_checking_function/include",
    "include",
  ]
  deps = [
    "//base/security/frameworks/crypto_lite/cipher:cipher_shared",
    "//third_party/bounds_checking_function:libsec_shared",
    "//utils/native/lite/hilog:hilog_shared",
  ]
}
