#
# Copyright (c) 2020 FMSoft.
#

shared_library("ace_kit_common") {
  sources = [
    "src/nativeapi_common.cpp",
  ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/ace/interfaces/innerkits/builtin",
    "//foundation/ace/interfaces/innerkits/builtin/base",
    "include",
  ]
}
