# Copyright (c) 2020 FMSoft.

shared_library("ace_kit_deviceinfo") {
  sources = [
    "src/nativeapi_deviceinfo.cpp",
  ]
  cflags = ["-Wall"]
  ldflags = [ "-lstdc++" ]

  include_dirs = [
    "//base/startup/interfaces/kits/syspara_lite",
    "//foundation/ace/interfaces/innerkits/builtin",
    "//foundation/ace/interfaces/innerkits/builtin/async",
    "//foundation/ace/interfaces/innerkits/builtin/base",
    "//foundation/graphic/lite/interfaces/kits/config",
    "//foundation/graphic/lite/interfaces/kits/ui/common",
    "//foundation/graphic/lite/interfaces/kits/utils",
    "//utils/native/lite/js/builtin/common/include",
    "include",
  ]
}
