#
# Copyright (c) 2020 FMSoft.
#

shared_library("ace_kit_kvstore") {
  sources = [
    "src/nativeapi_kv.cpp",
    "src/nativeapi_kv_impl.c",
  ]
  cflags = ["-Wall"]
  cflags_cc = cflags

  include_dirs = [
    "//foundation/aafwk/interfaces/kits/ability_lite",
    "//foundation/ace/interfaces/innerkits/builtin",
    "//foundation/ace/interfaces/innerkits/builtin/async",
    "//foundation/ace/interfaces/innerkits/builtin/base",
    "//third_party/bounds_checking_function/include",
    "//utils/native/lite/js/builtin/common/include",
    "include",
  ]
  deps = [
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}
